--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   json_annotation: ^4.5.0
   freezed_annotation: ^2.0.3
 
-  pluto_grid: ^2.10.3
+  pluto_grid: ^3.0.0-1.pre
   pointmobile_scanner: ^0.0.1
   auto_size_text: ^3.0.0
   http: ^0.13.4
