--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,9 @@ dependencies:
   percent_indicator: ^4.0.1
   progress_dialog: ^1.2.4
   flutter_beep: ^1.0.0
-  
+  dio: ^4.0.6
+  restart_app: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,6 +64,7 @@ dev_dependencies:
   build_runner: ^2.1.10
   sqflite_common_ffi: ^2.1.1
   mockito: ^5.1.0
+  restart_app: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
