--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   restart_app: ^1.1.0
   connectivity_plus: ^2.3.5
 
+  assets_audio_player: ^3.0.5
   vibration: ^1.7.3
   intl: ^0.17.0
 
