--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   vibration: ^1.7.3
   intl: ^0.17.0
 
+  assets_audio_player: ^3.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -86,7 +88,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
