--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   connectivity_plus: ^2.3.5
 
 #  assets_audio_player: ^3.0.5
-  vibration: ^1.7.3
+  vibration: ^1.7.4-nullsafety.0
   intl: ^0.17.0
 
   assets_audio_player: ^3.0.5
@@ -71,7 +71,7 @@ dev_dependencies:
   build_runner: ^2.1.10
   sqflite_common_ffi: ^2.1.1
   mockito: ^5.1.0
-  restart_app: ^1.1.0
+  #restart_app: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
