데이터 베이스 파일 분리

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kdlwms
-description: A new Flutter project.
+description: 덴소코리아 창고관리
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   provider: ^6.0.2
-  sqflite: ^2.0.2+1
   json_annotation: ^4.5.0
   freezed_annotation: ^2.0.3
 
@@ -44,7 +43,8 @@ dependencies:
   auto_size_text: ^3.0.0
   http: ^0.13.4
   percent_indicator: ^4.0.1
-  progress_dialog: ^1.2.4
+#  progress_dialog: ^1.2.4
+  progress_dialog_null_safe: ^1.0.4
   flutter_beep: ^1.0.0
   dio: ^4.0.6
   restart_app: ^1.1.0
@@ -55,6 +55,11 @@ dependencies:
   intl: ^0.17.0
 
   assets_audio_player: ^3.0.5
+
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.11
+  path: ^1.8.1
+
 
 dev_dependencies:
   flutter_test:
